--- a/.github/workflows/my_pipeline.yml
+++ b/.github/workflows/my_pipeline.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Add Runner IP to Security Group
         run: |
           aws ec2 authorize-security-group-ingress \
-            --group-id YOUR_SG_ID \
+            --group-id sg-05cfc24b819e093cd \
             --protocol tcp \
             --port 22 \   # or 3306 for DB, etc.
             --cidr ${{ steps.ip.outputs.ipv4 }}/32
@@ -42,7 +42,7 @@ jobs:
         if: always()
         run: |
           aws ec2 revoke-security-group-ingress \
-            --group-id YOUR_SG_ID \
+            --group-id sg-05cfc24b819e093cd \
             --protocol tcp \
             --port 22 \
             --cidr ${{ steps.ip.outputs.ipv4 }}/32
